# cosmic-backend

./: .dockerignore  .env.example  .gitignore  AGENT_GUIDE.md  API_TREE.md  BLUEPRINT.md  Cargo.toml  DESIGN_&_DEVELOPMENT_PRINCIPLES.md  README.md
.github/workflows/: deploy.yml  manual-deploy.yml
docker/: Dockerfile  docker-compose.local.yml  docker-compose.yml
docs/: COMPONENTS_&_DEPENDENCIES.md  COSMIC_API_GUIDE_FOR_REACT_NATIVE_DEVELOPER_AGENT.md
migrations/: 20260117000001_create_users.sql  20260117000002_create_email_verification_tokens.sql  20260117000003_create_secrets.sql  20260117000004_create_refresh_tokens.sql  20260117000005_create_notes.sql  20260122000001_add_favorites_to_secrets.sql  20260122000002_add_favorites_to_notes.sql  20260122000003_create_otp_requests.sql  20260122000004_add_token_version_to_users.sql
nginx/: cosmic_proxy.conf  nginx.conf
src/: app.rs  docs.rs  error.rs  main.rs  state.rs
src/cache/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/auth/: mod.rs
src/core/crypto/: mod.rs
src/core/vault/: mod.rs
src/handlers/: account.rs  auth.rs  email.rs  items.rs  mod.rs  notes.rs  secrets.rs
src/middleware/: mod.rs  rate_limit.rs
src/repository/: mod.rs  note.rs  otp.rs  secret.rs  token.rs  user.rs  verification.rs
src/routes/: mod.rs
src/types/: mod.rs
